[package]
name = "polkapipe"
description = "Fork of sube focusing on communication"
license = "Apache-2.0"
version = "0.5.1"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"
repository = "https://github.com/valibre-org/sube"

[dependencies]
async-trait = "0.1.51"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4.14"
jsonrpc = { version = "0.12.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

# http backend
surf = { version = "2.3.1", default_features = false, optional = true }

# ws backend
futures-channel = { version = "0.3.17", default-features = false, features = ["alloc"], optional = true }
futures-util = { version = "0.3.17", default-features = false, features = ["sink"], optional = true }
async-mutex = { version = "1.4.0", optional = true }
async-tls = { version = "0.11.0", default-features = false, optional = true }
async-std = { version = "1.10.0", default_features = false, optional = true }

smoldot-light = { version = "*", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# tokio = {version="*", features = ["net"]}
# soketto = "*"
wasm-sockets = "*"
getrandom = { version = "0.2.7", features = ["wasm-bindgen", "js"] }
wasm-bindgen = "*"
 ws_stream_wasm = "0.7"
wasm-bindgen-futures = "*"
futures = "*"
# pharos = "*"
console_log = "*"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "^0.1"
js-sys = "^0.3"
pin-utils = "^0.1.0-alpha"
wasm-logger = "^0.1"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
# this is currently necessary for `wasm-timer::Delay` to work
# parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
futures-channel = { version="*" }
async-std = {  version = "1.10", default_features = false }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.15.0",  default-features = false, features = ["async-std-runtime"], optional = true }
futures = { version="*", optional = true }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
hex-literal = "0.3.3"
env_logger = "*"


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "*"

[features]
default = ["std", "ws"]
http = ["surf/h1-client-rustls"]
http-web = ["surf/wasm-client"]
std = []
ws = ["async-std", "async-tungstenite", "async-mutex", "futures-util", "futures-channel"]
wss = ["ws", "async-tls", "async-tungstenite/async-tls"]
ws-web = []
smoldot-std = ["smoldot-light", "futures"]

[package.metadata.docs.rs]
features = ["http"]
